# pai

./: .gitignore  Experiment.hs  Experiment.prof  HandWritten.hs  InvUtil.hs  Inverter.hs  Main.hs  Makefile  MyData.hs  PaI.cabal  README.md  Tests.hs  Util.hs  experiment.sh
Control/Monad/: SearchTree.hs
Inverter/: Action.hs  Build.hs  CodeGen.hs  HSSyntax.hs
Syntax/: Abstract.hs  Concrete.hs  MiniHaskell.hs
TreeAutomata/: Automata.hs  Guided.hs
doc/: Makefile  header.txt  index.txt
examples/: add.txt  bin2peano.txt  diff.txt  double.txt  doubleList.txt  dupdouble.txt  fib.txt  incbin.txt  inpre.txt  inpreInj.txt  peano2bin.txt  print_sexp.txt  reverse.txt  runlength.txt  serialize_bintree.txt  sigma.txt  snoc.txt  snocrev.txt  taba_reverse.txt  taba_reverse_let.txt  tree2list.txt  twopower.txt  zip.txt  zipI.txt
rldemo/: README  README.md  RLMain.hs  cleanup.sh  runlength8.txt
