cabal-version: 2.4
name:                PaI
version:             0.1.0.1
-- synopsis:            
-- description:         
homepage:            https://github.com/kztk-m/pai
license:             BSD-3-Clause
license-file:        LICENSE
author:              Kazutaka Matsuda
maintainer:          kztk@tohoku.ac.jp
-- copyright:           
category:            LANGUAGE
build-type:          Simple
extra-source-files:  README.md

flag LLVM
  description: Compile files via LLVM 
  default:     False

executable PaI
  main-is:             Main.hs
  other-modules:       
        Inverter,
        Inverter.Action,
        Inverter.Build,
        Inverter.CodeGen,
        Syntax.Abstract,
        Syntax.Concrete,
        Syntax.MiniHaskell,
        TreeAutomata.Automata,
        TreeAutomata.Guided,
        Util
  -- other-extensions:    
  build-depends:       base             >= 4.8 && < 4.19, 
                       containers       >= 0.5 && < 0.7, 
                       pretty           >= 1.1 && < 1.2, 
                       mtl              >= 2.2 && < 2.4, 
                       parsec           >= 3.1 && < 3.2
  -- hs-source-dirs:      
  default-language:    Haskell2010


  ghc-options: -rtsopts -O2
  if flag(LLVM) 
     ghc-options: -fllvm -optlo-O3


